--- a/templates/pages/addExoplanet.html
+++ b/templates/pages/addExoplanet.html
@@ -27,7 +27,7 @@
                                 <label for="exampleFormControlSelect1">Type:</label>
 									<select name="type" class="form-control input_planet" id="exampleFormControlSelect1" required>
       <option value="rocky">rocky</option>
-      <option value="gas">gas</option>
+      <option value="gas giant">gas giant</option>
     </select>
 								</div>
 								<div class="form-group">
