Modified margin-top for #profile-col when flash message shows up

--- a/templates/layout/scripts.html
+++ b/templates/layout/scripts.html
@@ -17,7 +17,7 @@
             if ($('#registration-message-container').length) {
                 $('.margin').addClass('no-margin');
                 $('.register-form').addClass('reduce-margin');
-                $('.user-info').css('margin-top', '10%');
+                $('#profile-col').css('margin-top', '7.5%');
             }
                 $('.navbar-toggler').click(function(){
                 $('#nav').toggleClass('navbar-down');
