Reduced the animation duration for #weight_message

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -872,7 +872,7 @@ i {
   padding-top: 19px;
   margin: 0 auto;
   animation-name: weight-zoom;
-  animation-duration: 1s;
+  animation-duration: .5s;
   animation-fill-mode: forwards;
 }
 
