--- a/templates/pages/exoplanetWeight.html
+++ b/templates/pages/exoplanetWeight.html
@@ -1,21 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-	<div id="your_weight_container" class="row">
-		<div class="col-12">
-        <div id="weight_message">
-			<p>On the surface of {{ exoplanet_name }} your weight is<br>
-             {{ your_weightExoplanet }} kg.</p>
-        </div>
-		</div>
-	</div>
-    <div id="row-weight-buttons" class="row">
-    <div id="weight-buttons-container" class="col-12">
-        <a aria-label="calculate your weight on this exoplanet" href="{{ url_for('calculate_weight', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}"><button class="weight_buttons buttons">again</button></a>
-        <a aria-label="your favourites list" href="{{ url_for('favourite_list') }}"><button class="weight_buttons buttons">favourites</button></a>
-        <a aria-label="details" href="{{ url_for('favourite_detailed', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">{{ exoplanet_name }}</button></a>
+   <div id="your_weight_container" class="row">
+      <div class="col-12">
+         <div id="weight_message">
+            <p>On the surface of {{ exoplanet_name }} your weight is<br>
+               {{ your_weightExoplanet }} kg.
+            </p>
+         </div>
+      </div>
+   </div>
+   <div id="row-weight-buttons" class="row">
+      <div id="weight-buttons-container" class="col-12">
+         <a aria-label="calculate your weight on this exoplanet" href="{{ url_for('calculate_weight', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}"><button class="weight_buttons buttons">again</button></a>
+         <a aria-label="your favourites list" href="{{ url_for('favourite_list') }}"><button class="weight_buttons buttons">favourites</button></a>
+         <a aria-label="details" href="{{ url_for('favourite_detailed', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">{{ exoplanet_name }}</button></a>
+      </div>
+   </div>
 </div>
-</div>
-</div>
-
 {% endblock %}
