--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,16 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
 <div id="home_container" class="container-fluid">
-	<div class="row">
-		<div id="home" class="col-12"></div>
-	</div>
-	<div id="title_area" class="row">
-		<div id="title_container" class="col-12">
-			<h1 id="title">other worlds</h1>
-			<h2 id="sub_title">brief guide to exoplanets</h2>
-			<a aria-label="what is about" href="{{ url_for('about') }}"><div class="buttons home_buttons">about</div></a>
-			<a aria-label="our main list" href="{{ url_for('exoplanets_display') }}"><div id="main-list" class="buttons home_buttons">main list</div></a>
-		</div>
-	</div>
+   <div class="row">
+      <div id="home" class="col-12"></div>
+   </div>
+   <div id="title_area" class="row">
+      <div id="title_container" class="col-12">
+         <h1 id="title">other worlds</h1>
+         <h2 id="sub_title">brief guide to exoplanets</h2>
+         <a aria-label="what is about" href="{{ url_for('about') }}">
+            <div class="buttons home_buttons">about</div>
+         </a>
+         <a aria-label="our main list" href="{{ url_for('exoplanets_display') }}">
+            <div id="main-list" class="buttons home_buttons">main list</div>
+         </a>
+      </div>
+   </div>
 </div>
 {% endblock %}
