Added a comma and few minor changes to the content of the text

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -30,13 +30,13 @@
                Welcome to OTHER WORLDS - a site that offers you a way to keep track of your favourite exoplanets
                discovered up to date. You will have your own list of Favourites
                in which you can add any exoplanet that you wish as soon as it is discovered, by simply entering its details in the form provided. 
-               To kick things off you will also be provided with a <a id="about-main" href="{{ url_for('exoplanets_display') }}">Main List</a> containing some 
+               To kick things off, you will also be provided with a <a id="about-main" href="{{ url_for('exoplanets_display') }}">Main List</a> containing some 
                of the most relevant exoplanets discovered up to date, from which you can add to your Favourites list.
             </p>
             <p id="about-third-paragraph" class="about-paragraphs">Contrary to what's depicting in most SCI FI movies, a fun fact about going to other celestial bodies is that
                your weight differs from that of on Earth due to their different gravity attraction. This site also
                gives you the opportunity to quickly find out your weight on each of your favourite exoplanet.
-               Enjoy your trip to other worlds!
+               Enjoy your trip to  OTHER WORLDS!
             </p>
          </div>
       </div>
