Added 'TOTAL' to the number of exoplanets

--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -4,7 +4,7 @@
       <div id="profile-table">
          <ul class="list-group">
             <li id="profile-name" class="list-group-item">{{ user }}'s Profile</li>
-            <li id="profile-exoplanets" class="list-group-item">Exoplanets: <span>{{ users_list }}</span><div class="profile-separators"></div></li>
+            <li id="profile-exoplanets" class="list-group-item">Exoplanets (TOTAL): <span>{{ users_list }}</span><div class="profile-separators"></div></li>
             
             <li class="list-group-item">Rocky Planets: <span>{{ users_rocky }}</span><div class="profile-separators"></div></li>
             
